[project]
name = "redshift-mcp"
version = "0.1.0"
description = "MCP server for Redshift based on username and password authentication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.3",
    "loguru>=0.7.3",
    "mcp[cli]>=1.12.0",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "regex>=2024.11.6",
    "sqlalchemy>=2.0.41",
    "sqlglot[rs]>=27.1.0",
    "sqlmodel>=0.0.24",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "ipython>=9.4.0",
]
